--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ avatarurl: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c" # 
 
 # 8. Site navigation
 navigation_header:
-  Home: /
+  Inicio: /
   Elements: /elements/
   Blog: /blog/
   Categories: /categories/
@@ -96,11 +96,11 @@ navigation_footer:
   Created by David Darnes: https://darn.es
 
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
-  Twitter: https://twitter.com/DavidDarnes
-  LinkedIn: https://www.linkedin.com/in/daviddarnes
-  Google+: https://plus.google.com/+DavidDarnes
-  GitHub: https://github.com/daviddarnes
-  link: https://darn.es
+  Twitter: https://twitter.com/ajmohedano
+  LinkedIn: 
+  Google+: https://plus.google.com/+AlfonsoJimenezMohedano
+  GitHub: https://github.com/ajmohedano
+  link: 
   RSS: /feed.xml
 
 sharing_links: # Appear at the bottom of single blog posts, uncomment and comment out as desired. Colours set the button colour
