--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ avatarurl: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c" # 
 # 8. Site navigation
 navigation_header:
   Inicio: /
-  Elements: /elements/
+  Elementos: /elements/
   Blog: /blog/
   Categories: /categories/
   Search: /search/
